# SentinelAI

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_investigation_family.py  0002_memory_item.py  0003_memory_content_and_outbox.py  0004_investigation_tenant.py  0005_investigation_erased_at.py
backend/app/: __init__.py  lifespan.py  main.py
backend/app/ai/: __init__.py  errors.py
backend/app/application/: __init__.py
backend/app/config/: __init__.py  ai.py  auth.py  database.py  environment.py  errors.py  log_format.py  settings.py  validation.py
backend/app/core/: __init__.py  logging.py
backend/app/dependencies/: __init__.py  projector.py  services.py
backend/app/domain/: __init__.py  entity.py  enums.py  erasure.py  evidence.py  exceptions.py  finding.py  identifiers.py  investigation.py  investigation_outcome.py  memory_item.py  relationship.py  report.py  repositories.py  task.py  trace.py  value_objects.py
backend/app/infrastructure/: __init__.py
backend/app/observability/: __init__.py  correlation.py  metrics.py
backend/app/presentation/: __init__.py  exception_handlers.py  health.py  observability.py
backend/app/shared/: __init__.py  exceptions.py  secret.py
backend/scripts/: export_openapi.py  mint_dev_jwt.py  seed_demo.py
backend/tests/: test_health.py
backend/tests/ai/: test_agent_runtime.py  test_ai_foundation.py  test_decision_engine.py  test_graph_analysis_agent.py  test_investigation_loop.py  test_loop_outcome_synthesis.py  test_memory_agent.py  test_planner_agent.py  test_rag_pipeline.py  test_retrieval_flow.py  test_runner_retrieval.py  test_state_assembler.py  test_threat_intel_agent.py  test_validation_agent.py
backend/tests/ai_validation/: __init__.py  support.py  test_agent_validation.py  test_decision_validation.py  test_knowledge_validation.py  test_memory_validation.py  test_planner_validation.py  test_threat_intel_validation.py  test_validation_agent_validation.py
backend/tests/application/: test_authorization_policy.py  test_memory_projector.py  test_secrets.py
backend/tests/architecture/: test_architecture.py
backend/tests/config/: test_configuration.py
backend/tests/domain/: test_domain.py
backend/tests/foundation/: test_support.py
backend/tests/infrastructure/: test_attack_catalog_provider.py  test_composite_retriever.py  test_filesystem_payload_store.py  test_gemini_embedding.py  test_gemini_provider.py  test_memory_embedding_adapter.py  test_nvd_provider.py  test_nvidia_provider.py
backend/tests/integration/: __init__.py  test_ai_application_handoff.py  test_api_investigation_flow.py  test_api_planner_orchestration.py
backend/tests/live/: neo4j_support.py  qdrant_support.py  support.py  test_gemini_embedding_smoke.py  test_gemini_smoke.py  test_live_api.py  test_live_auth.py  test_live_run.py  test_memory_outbox_qdrant.py  test_neo4j_graph.py  test_postgres_investigation.py  test_postgres_memory.py
backend/tests/observability/: test_correlation.py  test_logging.py  test_metrics.py
backend/tests/operational/: __init__.py  test_reliability.py  test_resilience.py  test_scalability.py
backend/tests/persistence/: test_persistence.py
backend/tests/presentation/: test_api_foundation.py  test_audit.py  test_authentication.py  test_authorization.py  test_evidence_payload_api.py  test_graph_api.py  test_investigation_api.py  test_investigation_erasure_api.py  test_jwt_auth_chain.py  test_jwt_authenticator.py  test_memory_api.py  (+6 more)
(+326 files in other folders)
