[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinelai-backend"
version = "0.1.0"
description = "SentinelAI backend application skeleton (ES-002)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "neo4j>=5",
    "qdrant-client>=1.9",
    "redis>=5",
    # Direct HTTP client of the Gemini LLM adapter (ES-043); already present
    # transitively via qdrant-client, declared because we import it.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI uses `Depends()` in argument defaults as its dependency-injection idiom.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live-infrastructure tests are opt-in: the default run deselects them so the
# suite stays green without databases. Select them with `pytest -m live`
# (a command-line -m overrides the one below).
addopts = '--strict-markers -m "not live and not live_ai and not live_neo4j"'
# Validation taxonomy (testing-strategy §5). `--strict-markers` makes an
# unregistered marker an error, so the taxonomy stays explicit.
markers = [
    "unit: Domain Validation — a component/service in isolation with in-memory doubles.",
    "integration: Integration Validation — cross-domain collaboration (ES-034).",
    "architecture: Architecture Validation — boundaries and dependency rules (ES-033).",
    "operational: Operational Validation — health, readiness, metrics, config and startup.",
    "ai: AI Validation — behavioral validation of AI capabilities (ES-035).",
    "live: Live-infrastructure validation — requires a reachable PostgreSQL (opt-in, ES-040).",
    "live_ai: Live AI-provider validation — requires GOOGLE_API_KEY and network (opt-in, ES-043).",
    "live_neo4j: Live graph-store validation — requires a reachable Neo4j (opt-in, ES-048).",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
